# nyxml7

./: config.py  main.py  pyproject.toml  run_training.py
bot/: formatters.py  handlers.py
core/: redeemer.py  scheduler.py
core/strategies/: __init__.py  ml_strategy.py
db/: models.py  queries.py
ml/: data_fetcher.py  evaluator.py  features.py  model_store.py  trainer.py
models/: model_current.lgb  model_current_meta.json
tests/: test_gate_cvd_fetcher.py  test_live_parity_inputs.py  test_ml_features.py  test_ml_strategy.py
