[project]
name = "nyxtest4"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "ccxt>=4.5.47",
    "httpx>=0.28.1",
    "lightgbm>=4.6.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
]
